# xfs-rs

./: .gitignore  Cargo.toml  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: fuse.rs  main.rs
crates/libxfs/: Cargo.toml
crates/libxfs/src/: crc.rs  device.rs  endian.rs  error.rs  geometry.rs  lib.rs  reader.rs
crates/libxfs/src/on_disk/: agf.rs  agfl.rs  agi.rs  inobt.rs  mod.rs  superblock.rs
crates/std-tool/: Cargo.toml
crates/std-tool/src/: main.rs
crates/xfs/: Cargo.toml
crates/xfs/src/: crc.rs  device.rs  endian.rs  error.rs  geometry.rs  lib.rs  reader.rs  writer.rs
crates/xfs/src/on_disk/: agf.rs  agfl.rs  agi.rs  bmap.rs  dir.rs  inobt.rs  inode.rs  mod.rs  superblock.rs
