[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
xfs-rs = { path = "crates/xfs", default-features = false }
rootcause = "0.12.1"
clap = { version = "4.5.60", features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v4"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
