[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
xfs-rs = { path = "crates/xfs", default-features = false }
rootcause = "0.12.1"
clap = { version = "4.5.60", features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }
uuid = { version = "1.21.0", default-features = false, features = ["v4"] }
fuser = { version = "0.17.0", default-features = false }
libc = "1.0.0-alpha.3"
ctrlc = "3.5.2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
