[package]
name = "xfs-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xfs"
path = "src/main.rs"

[dependencies]
xfs-rs = { workspace = true, features = ["std"] }
clap = { workspace = true }
rootcause = { workspace = true }
uuid = { workspace = true }
fuser = { workspace = true, optional = true }
libc = { workspace = true }
ctrlc = { workspace = true }

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[lints]
workspace = true
